--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
